Resolve #AG279 - Fix styling for word-breaking when wrapping

--- a/Agiil.Web/Content/Scss/_RichDescriptions.scss
+++ b/Agiil.Web/Content/Scss/_RichDescriptions.scss
@@ -1,7 +1,7 @@
 ﻿@import '_AppWideVariables';
 
 @mixin rich_description {
-  word-break: break-all;
+  overflow-wrap: break-word;
   
   ul {
     padding-left: 1.6em;
